@@ -24,22 +24,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|analysis
-operator|.
-name|core
-operator|.
-name|WhitespaceAnalyzer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|index
 operator|.
 name|IndexWriter
@@ -219,13 +203,7 @@ name|Version
 operator|.
 name|LUCENE_CURRENT
 argument_list|,
-operator|new
-name|WhitespaceAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
+literal|null
 argument_list|)
 operator|.
 name|setOpenMode
