@@ -22,16 +22,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|File
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
 import|;
 end_import
@@ -121,22 +111,6 @@ operator|.
 name|analysis
 operator|.
 name|TokenStream
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|standard
-operator|.
-name|StandardAnalyzer
 import|;
 end_import
 
@@ -312,34 +286,6 @@ name|TermQuery
 import|;
 end_import
 
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|FSDirectory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|Version
-import|;
-end_import
-
 begin_comment
 comment|/**  * Expand a query by looking up synonyms for every term.  * You need to invoke {@link Syns2Index} first to build the synonym index.  *  * @see Syns2Index  */
 end_comment
@@ -351,130 +297,7 @@ specifier|final
 class|class
 name|SynExpand
 block|{
-comment|/** 	 * Test driver for synonym expansion. 	 * Uses boost factor of 0.9 for illustrative purposes. 	 * 	 * If you pass in the query "big dog" then it prints out: 	 * 	 *<code><pre> 	 * Query: big adult^0.9 bad^0.9 bighearted^0.9 boastful^0.9 boastfully^0.9 bounteous^0.9 bountiful^0.9 braggy^0.9 crowing^0.9 freehanded^0.9 giving^0.9 grown^0.9 grownup^0.9 handsome^0.9 large^0.9 liberal^0.9 magnanimous^0.9 momentous^0.9 openhanded^0.9 prominent^0.9 swelled^0.9 vainglorious^0.9 vauntingly^0.9 	 * dog andiron^0.9 blackguard^0.9 bounder^0.9 cad^0.9 chase^0.9 click^0.9 detent^0.9 dogtooth^0.9 firedog^0.9 frank^0.9 frankfurter^0.9 frump^0.9 heel^0.9 hotdog^0.9 hound^0.9 pawl^0.9 tag^0.9 tail^0.9 track^0.9 trail^0.9 weenie^0.9 wiener^0.9 wienerwurst^0.9 	 *</pre></code> 	 */
-DECL|method|main
-specifier|public
-specifier|static
-name|void
-name|main
-parameter_list|(
-name|String
-index|[]
-name|args
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-if|if
-condition|(
-name|args
-operator|.
-name|length
-operator|!=
-literal|2
-condition|)
-block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"java org.apache.lucene.wordnet.SynExpand<index path><query>"
-argument_list|)
-expr_stmt|;
-block|}
-name|FSDirectory
-name|directory
-init|=
-name|FSDirectory
-operator|.
-name|open
-argument_list|(
-operator|new
-name|File
-argument_list|(
-name|args
-index|[
-literal|0
-index|]
-argument_list|)
-argument_list|)
-decl_stmt|;
-name|IndexSearcher
-name|searcher
-init|=
-operator|new
-name|IndexSearcher
-argument_list|(
-name|directory
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-name|String
-name|query
-init|=
-name|args
-index|[
-literal|1
-index|]
-decl_stmt|;
-name|String
-name|field
-init|=
-literal|"contents"
-decl_stmt|;
-name|Query
-name|q
-init|=
-name|expand
-argument_list|(
-name|query
-argument_list|,
-name|searcher
-argument_list|,
-operator|new
-name|StandardAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
-argument_list|,
-name|field
-argument_list|,
-literal|0.9f
-argument_list|)
-decl_stmt|;
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"Query: "
-operator|+
-name|q
-operator|.
-name|toString
-argument_list|(
-name|field
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|searcher
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|directory
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-comment|/** 	 * Perform synonym expansion on a query. 	 * 	 * @param query users query that is assumed to not have any "special" query syntax, thus it should be just normal words, so "big dog" makes sense, but a query like "title:foo^1.2" doesn't as this should presumably be passed directly to the default query parser. 	 * 	 * @param syns a opened to the Lucene index you previously created with {@link Syns2Index}. The searcher is not closed or otherwise altered. 	 * 	 * @param a optional analyzer used to parse the users query else {@link StandardAnalyzer} is used 	 * 	 * @param f optional field name to search in or null if you want the default of "contents" 	 * 	 * @param boost optional boost applied to synonyms else no boost is applied 	 * 	 * @return the expanded Query 	 */
+comment|/** 	 * Perform synonym expansion on a query. 	 * 	 * @param query users query that is assumed to not have any "special" query syntax, thus it should be just normal words, so "big dog" makes sense, but a query like "title:foo^1.2" doesn't as this should presumably be passed directly to the default query parser. 	 * 	 * @param syns a opened to the Lucene index you previously created with {@link Syns2Index}. The searcher is not closed or otherwise altered. 	 * 	 * @param a analyzer used to parse the users query. 	 * 	 * @param f optional field name to search in or null if you want the default of "contents" 	 * 	 * @param boost optional boost applied to synonyms else no boost is applied 	 * 	 * @return the expanded Query 	 */
 DECL|method|expand
 specifier|public
 specifier|static
@@ -543,22 +366,6 @@ literal|"contents"
 else|:
 name|f
 decl_stmt|;
-if|if
-condition|(
-name|a
-operator|==
-literal|null
-condition|)
-name|a
-operator|=
-operator|new
-name|StandardAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
-expr_stmt|;
 comment|// [1] Parse query into separate words so that when we expand we can avoid dups
 name|TokenStream
 name|ts
