@@ -318,6 +318,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|search
+operator|.
+name|TotalHitCountCollector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|FSDirectory
@@ -334,75 +348,6 @@ specifier|public
 class|class
 name|SynLookup
 block|{
-DECL|class|CountingCollector
-specifier|final
-specifier|static
-class|class
-name|CountingCollector
-extends|extends
-name|Collector
-block|{
-DECL|field|numHits
-specifier|public
-name|int
-name|numHits
-init|=
-literal|0
-decl_stmt|;
-annotation|@
-name|Override
-DECL|method|setScorer
-specifier|public
-name|void
-name|setScorer
-parameter_list|(
-name|Scorer
-name|scorer
-parameter_list|)
-throws|throws
-name|IOException
-block|{}
-annotation|@
-name|Override
-DECL|method|collect
-specifier|public
-name|void
-name|collect
-parameter_list|(
-name|int
-name|doc
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|numHits
-operator|++
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|setNextReader
-specifier|public
-name|void
-name|setNextReader
-parameter_list|(
-name|AtomicReaderContext
-name|context
-parameter_list|)
-block|{}
-annotation|@
-name|Override
-DECL|method|acceptsDocsOutOfOrder
-specifier|public
-name|boolean
-name|acceptsDocsOutOfOrder
-parameter_list|()
-block|{
-return|return
-literal|true
-return|;
-block|}
-block|}
 DECL|method|main
 specifier|public
 specifier|static
@@ -488,11 +433,11 @@ name|word
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|CountingCollector
+name|TotalHitCountCollector
 name|countingCollector
 init|=
 operator|new
-name|CountingCollector
+name|TotalHitCountCollector
 argument_list|()
 decl_stmt|;
 name|searcher
@@ -508,7 +453,8 @@ if|if
 condition|(
 name|countingCollector
 operator|.
-name|numHits
+name|getTotalHits
+argument_list|()
 operator|==
 literal|0
 condition|)
@@ -553,7 +499,8 @@ name|query
 argument_list|,
 name|countingCollector
 operator|.
-name|numHits
+name|getTotalHits
+argument_list|()
 argument_list|)
 operator|.
 name|scoreDocs
