@@ -32,6 +32,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|Reader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -78,9 +88,21 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|core
+name|Analyzer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
 operator|.
-name|WhitespaceAnalyzer
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|TokenStream
 import|;
 end_import
 
@@ -495,6 +517,36 @@ name|SuggestWord
 argument_list|>
 name|comparator
 decl_stmt|;
+comment|/** we don't need to actually analyze any content:    *  all fields are indexed NOT_ANALYZED, but docsinverter    *  needs this for the offset gap!    */
+DECL|field|noAnalyzer
+specifier|private
+specifier|static
+name|Analyzer
+name|noAnalyzer
+init|=
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|TokenStream
+name|tokenStream
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
+name|Reader
+name|reader
+parameter_list|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+decl_stmt|;
 comment|/**    * Use the given directory as a spell checker index. The directory    * is created if it doesn't exist yet.    * @param spellIndex the spell index directory    * @param sd the {@link StringDistance} measurement to use     * @throws IOException if Spellchecker can not open the directory    */
 DECL|method|SpellChecker
 specifier|public
@@ -628,13 +680,7 @@ name|Version
 operator|.
 name|LUCENE_CURRENT
 argument_list|,
-operator|new
-name|WhitespaceAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
+name|noAnalyzer
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1631,13 +1677,7 @@ name|Version
 operator|.
 name|LUCENE_CURRENT
 argument_list|,
-operator|new
-name|WhitespaceAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
+name|noAnalyzer
 argument_list|)
 operator|.
 name|setOpenMode
@@ -1762,13 +1802,7 @@ name|Version
 operator|.
 name|LUCENE_CURRENT
 argument_list|,
-operator|new
-name|WhitespaceAnalyzer
-argument_list|(
-name|Version
-operator|.
-name|LUCENE_CURRENT
-argument_list|)
+name|noAnalyzer
 argument_list|)
 operator|.
 name|setRAMBufferSizeMB
